# m1-project

./: AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: edits.rs  lib.rs  main.rs  query.rs  validate.rs  xml.rs
tests/: cli.rs  corpus.rs  encoding.rs  mode.rs
